loopfor.LoopFor.scala.error
Erreur de compilation :
LoopFor:9: error: '<-' expected but ')' found.
for (i < nbpas){
              ^LoopFor:14: error: illegal start of simple expression
	}
        ^